fixed map not showing

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,7 @@
-t  #map {
+#map {
     height: 700px;
     width: 1000px;
-  }
+}
 
 
 td {
